--- a/ppastelestradicionales.html
+++ b/ppastelestradicionales.html
@@ -71,6 +71,36 @@ width="145" heigth="145"></td></center>
 width="145" heigth="145"></td></center>
 <td> <center> <h2> $400 </h2> </center> </td>
 </tr>
+</tr> </td></table> <br> <br> <br>
+
+
+<center>
+<h1>AHORA PUEDES REALIZAR TU PEDIDO VIA ELECTRONICA Y RECOGER EN TIENDA</h1>
+</center>
+<br> 
+<form method="post"="mailto:karlaamcarmona@outlook.com">
+<center>
+  <p>Tu nombre:</p>
+  <input type="text" name="nombre"/>
+  <p>Tu email:</p>
+  <input type="text" name="email"/>
+  <p>Tipo de pastel:</p>
+  <input type="text" name="asunto"/>
+  <p>Cantidad:</p>
+  <input type="textarea" name="solicitud"/ rows="5" cols="40">
+  <p><input type="submit" value="Apartar"></p>
+</center>
+</form>
+
+<footer>
+  
+    <center>
+
+     Copyright &copy; 1990-2014 Peter Doe, todos los derechos reservados.  Facebook: Pastelerias La Zarza (Pasteles Para Compartir) Telefono: 2464876349
+      Instagram: pastelerias_lazarza Correo: karlaamcarmona@outlook.com   Direccion: Calle Miguel Lira Y Ortega No.01, Centro, 90000 Tlaxcala de Xicohtencatl, Tlax
+</center>
+  </footer>
+
 </body>
 
  
